[gd_scene load_steps=4 format=3 uid="uid://cy1pgkkruekm8"]

[ext_resource type="Script" uid="uid://bv2vvqqi24h5v" path="res://Scenes/Menus/main_menu.gd" id="1_penys"]
[ext_resource type="Texture2D" uid="uid://clcgacctyhal" path="res://Icons/Music_on.png" id="2_aur2u"]
[ext_resource type="Texture2D" uid="uid://b8mernoq4rglq" path="res://Icons/Music_off.png" id="3_5wi6m"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_penys")

[node name="Background" type="ColorRect" parent="."]
custom_minimum_size = Vector2(200, 200)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -21.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.101960786, 0.22745098, 0.32156864, 1)

[node name="MenuContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(400, 300)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -215.0
offset_top = -188.0
offset_right = 185.0
offset_bottom = 112.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="MenuContainer"]
layout_mode = 2
text = "The Hanse"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NewGameButton" type="Button" parent="MenuContainer"]
layout_mode = 2
text = "New Game"

[node name="QuitGameButton" type="Button" parent="MenuContainer"]
layout_mode = 2
text = "Exit Game"

[node name="MusicToggle" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -3.0
offset_top = -48.0
offset_right = 47.0
offset_bottom = 2.0
grow_vertical = 0
texture_normal = ExtResource("2_aur2u")
texture_disabled = ExtResource("3_5wi6m")
ignore_texture_size = true
stretch_mode = 5
